--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,5 +32,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_project:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      +materialized: table
+
+snapshots:
+  my_project:
+    +target_schema: dev_raw
